<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_MixingValveSetParameters" Id="{53981657-c63e-4e9c-b2a2-389391f1a24f}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_MixingValveSetParameters :
STRUCT
	nControlModeAlgorithm : E_MixingValveControlMode; //control mode in algorithm mode
	nControlModeManual : E_MixingValveControlMode; //control in manuel mode
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>